fix: wrap long words for chat bubbles
Refs #252 and #156

--- a/apps/mull-ui/src/app/components/chat-bubble/chat-bubble.scss
+++ b/apps/mull-ui/src/app/components/chat-bubble/chat-bubble.scss
@@ -6,6 +6,7 @@
 
 .chat-bubble {
   max-width: 65%;
+  overflow-wrap: break-word;
 }
 
 .current-user-chat-container {
